--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Welcome!
+<!DOCTYPE html>
+<html>
+  <head>
+      <meta charset="utf-8">
+  </head>
+
+  <body class="landing">
+    <h1>Welcome!</h1>
+  </body>
+</html>
